# odin-core

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  pytest.ini
agents/: master.py  router.py
config/: embeddings.py  indexed_repos.py  llm.py  settings.py
knowledge/: qdrant_store.py  search.py
memory/: postgres.py  registry.py  store.py
odin_mcp/: __init__.py  http_app.py  server.py  tools.py
scripts/: ingest.py  ingest_strategy.py  reindex_memory.py  reindex_repos.py
sql/: 001_project_registry.sql  002_odin_memory.sql
telegram_bot/: bot.py  handlers.py  transcribe.py
tests/: conftest.py  test_embeddings.py  test_indexed_repos.py  test_ingest_chunk.py  test_ingest_incremental.py  test_ingest_prune.py  test_ingest_scan.py  test_ingest_strategy.py  test_knowledge_search.py  test_mcp_http.py  test_memory_store.py  test_memory_store_ops.py  test_odin_mcp.py  test_qdrant_store.py  test_registry.py  test_reindex.py  test_reindex_memory.py  test_reindex_throttle.py  test_router.py  test_routing_e2e.py  test_settings.py  test_transcribe.py  test_voice_handler.py
tools/: n8n_client.py
